[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Bosses/BurnRooster/PhoenixProjectile.gd" type="Script" id=2]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Basic Hit.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Actors/Enemies/ProjectileDoT.gd" type="Script" id=5]
[ext_resource path="res://src/Effects/Deflect/lemon_deflect.png" type="Texture" id=6]
[ext_resource path="res://src/Effects/Textures/snow_sparkle.png" type="Texture" id=7]
[ext_resource path="res://src/Sounds/Ice Break.wav" type="AudioStream" id=8]
[ext_resource path="res://src/Actors/Bosses/BurnRooster/phoenix.res" type="SpriteFrames" id=9]
[ext_resource path="res://src/Effects/Fire/fire3.png" type="Texture" id=10]
[ext_resource path="res://src/Effects/Fire/fire1.png" type="Texture" id=11]
[ext_resource path="res://src/Effects/Fire/fire2.png" type="Texture" id=12]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.33
emission_shape = 2
emission_box_extents = Vector3( 8, 1, 0 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.972549, 0.972549, 0.972549, 1 )
anim_speed = 1.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 28, 36 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 5 )

[sub_resource type="CanvasItemMaterial" id=27]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="Curve" id=28]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=30]
curve = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=29]
emission_shape = 1
emission_sphere_radius = 33.16
flag_disable_z = true
direction = Vector3( 0.5, -1, 0 )
spread = 16.13
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 155.0
damping = 1.63
anim_speed = 1.0
anim_speed_curve = SubResource( 30 )

[node name="PhoenixProjectile" type="KinematicBody2D" groups=["Enemy Projectile"]]
z_index = 8
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 9 )
animation = "start"
frame = 3

[node name="particles2D" type="Particles2D" parent="."]
visible = false
material = SubResource( 1 )
z_index = -1
emitting = false
amount = 15
lifetime = 0.45
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 7 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -10.895
pitch_scale = 0.87
max_distance = 800.0
bus = "SFX"

[node name="Hit Particle" parent="." instance=ExtResource( 4 )]
texture = ExtResource( 1 )
hframes = 4
vframes = 4
animation_speed = 24.0
vertical_flip_chance = 0.0

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0, -6 )
shape = SubResource( 9 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 5 )
damage = 2.0

[node name="HittableArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="HittableArea"]
shape = SubResource( 5 )

[node name="deflect_particle" type="Sprite" parent="."]
visible = false
position = Vector2( 12, -2 )
z_index = 4
z_as_relative = false
texture = ExtResource( 6 )
hframes = 3
vframes = 2
script = ExtResource( 3 )
animation_speed = 32.0
one_shot = true

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="fire1" type="Particles2D" parent="."]
material = SubResource( 27 )
position = Vector2( 1, -12 )
z_index = -1
lifetime = 0.5
local_coords = false
process_material = SubResource( 29 )
texture = ExtResource( 11 )

[node name="fire2" type="Particles2D" parent="."]
material = SubResource( 27 )
position = Vector2( 1, -12 )
z_index = -1
lifetime = 0.5
local_coords = false
process_material = SubResource( 29 )
texture = ExtResource( 12 )

[node name="fire3" type="Particles2D" parent="."]
material = SubResource( 27 )
position = Vector2( 1, -12 )
z_index = -1
lifetime = 0.5
local_coords = false
process_material = SubResource( 29 )
texture = ExtResource( 10 )

[connection signal="animation_finished" from="animatedSprite" to="." method="_on_animatedSprite_animation_finished"]
